# pytraks

./: .gitignore  README.md  pyproject.toml
myapp/: manage.py
myapp/pytracks/: core.py
pytracks/: config.py  core.py  tasks.py
pytracks/scripts/: manage.py
