[project]
name = "pytraks"
version = "0.1.0"
description = ""
authors = [
    {name = "harlin",email = "hello@documendous.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
]

[tool.poetry]
packages = [{ include = "pytracks" }]

[tool.poetry.group.dev.dependencies]
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pt = "pytracks.core:cli"

